Fix QU rating alignment

--- a/app/styles/layout/_quick-update.scss
+++ b/app/styles/layout/_quick-update.scss
@@ -32,7 +32,7 @@
 }
 
 .quick-update--rate {
-  margin-top: 35px;
+  margin-top: 38px;
   margin-bottom: 15px;
 }
 
